# mndynamics

./: .buildinfo  .gitignore  LICENSE.md  README.md  genindex.html  index.html  modules.html  notebooks.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree  modules.doctree  notebooks.doctree
.github/: tests.yml
.github/workflows/: deploy_documents.yml  documents.yml  jekyll-gh-pages.yml  python-publish.yml  tests.yml
_modules/: index.html
_modules/mndynamics/models/py/: Erisir_Base.html  HH_Base.html  Inapik_Base.html  LIF_Base.html  RTM_Base.html  ch03.html  ch04.html  ch05.html
_sources/: index.rst.txt  modules.rst.txt  notebooks.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  index.rst  notebooks.rst
mndynamics/: __init__.py  utility.py
mndynamics/examples/: Chap_03.ipynb  Chap_04.ipynb  Chap_05.ipynb  Chap_07.ipynb  Chap_08.ipynb  Chap_09.ipynb  Chap_10.ipynb  Chap_11.ipynb  Chap_12.ipynb  Chap_17.ipynb  Chap_19.ipynb  Chap_20.ipynb  Chap_21.ipynb  Chap_22.ipynb  Chp_19.ipynb  Intro.ipynb  README.md
mndynamics/models/py/: Erisir_Base.py  FN_Base.py  HH_Base.py  Inapik_Base.py  LIF_Base.py  QIF_Base.py  RTM_Base.py  Theta_Base.py  WB_Base.py  WC_Base.py  ch03.py  ch04.py  ch05.py  chap06.py
mndynamics/tests/: all_tests.py  test_Erisir.py  test_HH.py  test_WB.py
